[Fronted]Add bus routes bus add/update/delete.

--- a/ShuttleBus.Protal/index.html
+++ b/ShuttleBus.Protal/index.html
@@ -12,7 +12,6 @@
 
     <!--Styles-->
     <link rel="stylesheet" type="text/css" href="/app/scripts/vendor/bootstrap/css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="/app/scripts/vendor/bootstrap/css/bootstrap-theme.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.0/css/toastr.css" />
     <link rel="stylesheet" type="text/css" href="/app/styles/style.css" />     
 </head>
@@ -39,7 +38,7 @@
                             <a ui-sref="login">Bus Schedules</a>
                         </li>
                         <li>
-                            <a ui-sref="login">Bus</a>
+                            <a ui-sref="buses">Bus</a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
@@ -104,6 +103,9 @@
         <script type="text/javascript" src="/app/scripts/controllers/user/logoutCtrl.js"></script>
         <script type="text/javascript" src="/app/scripts/controllers/user/editUserInfoCtrl.js"></script>
         <script type="text/javascript" src="/app/scripts/controllers/busRoutes/busRoutesCtrl.js"></script>
+        <script type="text/javascript" src="/app/scripts/controllers/busRoutes/busRouteCtrl.js"></script>
+        <script type="text/javascript" src="/app/scripts/controllers/bus/busesCtrl.js"></script>
+        <script type="text/javascript" src="/app/scripts/controllers/bus/busCtrl.js"></script>
 
         <!--Directives related-->     
 
@@ -112,6 +114,7 @@
         <script type="text/javascript" src="/app/scripts/services/logger.js"></script>
         <script type="text/javascript" src="/app/scripts/services/userService.js"></script>
         <script type="text/javascript" src="/app/scripts/services/busRouteService.js"></script>
+        <script type="text/javascript" src="/app/scripts/services/busService.js"></script>
 
         <!-- End AngularJS Related Js Files-->
     </body>
