[Fronted]Add busSchedules management, update something.

--- a/ShuttleBus.Protal/index.html
+++ b/ShuttleBus.Protal/index.html
@@ -35,7 +35,7 @@
                             <a ui-sref="busRoutes">Bus Routes</a>
                         </li>
                         <li>
-                            <a ui-sref="login">Bus Schedules</a>
+                            <a ui-sref="busSchedules">Bus Schedules</a>
                         </li>
                         <li>
                             <a ui-sref="buses">Bus</a>
@@ -102,10 +102,12 @@
         <script type="text/javascript" src="/app/scripts/controllers/user/loginCtrl.js"></script>
         <script type="text/javascript" src="/app/scripts/controllers/user/logoutCtrl.js"></script>
         <script type="text/javascript" src="/app/scripts/controllers/user/editUserInfoCtrl.js"></script>
-        <script type="text/javascript" src="/app/scripts/controllers/busRoutes/busRoutesCtrl.js"></script>
-        <script type="text/javascript" src="/app/scripts/controllers/busRoutes/busRouteCtrl.js"></script>
+        <script type="text/javascript" src="/app/scripts/controllers/busRoute/busRoutesCtrl.js"></script>
+        <script type="text/javascript" src="/app/scripts/controllers/busRoute/busRouteCtrl.js"></script>
         <script type="text/javascript" src="/app/scripts/controllers/bus/busesCtrl.js"></script>
         <script type="text/javascript" src="/app/scripts/controllers/bus/busCtrl.js"></script>
+        <script type="text/javascript" src="/app/scripts/controllers/busSchedule/busSchedulesCtrl.js"></script>
+        <script type="text/javascript" src="/app/scripts/controllers/busSchedule/busScheduleCtrl.js"></script>
 
         <!--Directives related-->     
 
@@ -115,6 +117,7 @@
         <script type="text/javascript" src="/app/scripts/services/userService.js"></script>
         <script type="text/javascript" src="/app/scripts/services/busRouteService.js"></script>
         <script type="text/javascript" src="/app/scripts/services/busService.js"></script>
+        <script type="text/javascript" src="/app/scripts/services/busScheduleService.js"></script>
 
         <!-- End AngularJS Related Js Files-->
     </body>
